src/test/ui/self/elision/ref-self-async.base.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:26:9
   |
LL |     async fn ref_self(&self, f: &u32) -> &u32 {
   |                                 ----     ----
   |                                 |
   |                                 this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:34:9
   |
LL |     async fn ref_Self(self: &Self, f: &u32) -> &u32 {
   |                                       ----     ----
   |                                       |
   |                                       this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:40:9
   |
LL |     async fn box_ref_Self(self: Box<&Self>, f: &u32) -> &u32 {
   |                                                ----     ----
   |                                                |
   |                                                this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:46:9
   |
LL |     async fn pin_ref_Self(self: Pin<&Self>, f: &u32) -> &u32 {
   |                                                ----     ----
   |                                                |
   |                                                this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:52:9
   |
LL |     async fn box_box_ref_Self(self: Box<Box<&Self>>, f: &u32) -> &u32 {
   |                                                         ----     ----
   |                                                         |
   |                                                         this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:58:9
   |
LL |     async fn box_pin_ref_Self(self: Box<Pin<&Self>>, f: &u32) -> &u32 {
   |                                                         ----     ----
   |                                                         |
   |                                                         this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error[E0623]: lifetime mismatch
  --> $DIR/ref-self-async.rs:64:9
   |
LL |     async fn wrap_ref_Self_Self(self: Wrap<&Self, Self>, f: &u8) -> &u8 {
   |                                                             ---     ---
   |                                                             |
   |                                                             this parameter and the return type are declared with different lifetimes...
LL |         f
   |         ^ ...but data from `f` is returned here

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0623`.
